--- a/package.json
+++ b/package.json
@@ -1,4 +1,15 @@
 {
+  "name": "prometheus_scraper",
+  "version": "1.0.0",
+  "type": "module",
+  "main": "app.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": "",
   "dependencies": {
     "axios": "^1.10.0",
     "mysql2": "^3.14.1",
